--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>The Room is closed.</h1>
-<p>Get your key <a href=“bit.ly/Crypto-CTF”>here</a></p>
+<p>Get your key <a href=“https://bit.ly/Crypto-CTF”>here</a></p>
