--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ function isToday(dateParameter) {
 }
 
 
-var key_crypto1 = isToday(new Date('22-08-2014')));
-var key_crypto2 = isToday(new Date('23-08-2014')));
-var key_crypto3 = isToday(new Date('24-08-2014')));
+var key_crypto1 = isToday(new Date('22-08-2014'));
+var key_crypto2 = isToday(new Date('23-08-2014'));
+var key_crypto3 = isToday(new Date('24-08-2014'));
 
 if(key_crypto1 || key_crypto2 || key_crypto3){
   console.log(true);
