--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@ var key_crypto2 = isToday(new Date('24-08-2019'));
 var key_crypto3 = isToday(new Date('25-08-2019'));
 
 if(key_crypto1 || key_crypto2 || key_crypto3){
+  location = 
+}
+
+var key_crypto4 = isToday(new Date('21-08-2019'));
+        
+if(key_crypto4){
   console.log(true);
 }
 </script>
